@@ -1,3 +1,14 @@
+2012-05-25  Filip Pizlo  <fpizlo@apple.com>
+
+        weakCompareAndSwap should work on Windows
+        https://bugs.webkit.org/show_bug.cgi?id=87549
+
+        Reviewed by Jessie Berlin.
+
+        * wtf/Atomics.h:
+        (WTF):
+        (WTF::weakCompareAndSwap):
+
 2012-05-24  Allan Sandfeld Jensen  <allan.jensen@nokia.com>
 
         cti_vm_throw gets kicked out by gcc 4.6 -flto
